--- a/src/styling/src/theme.config
+++ b/src/styling/src/theme.config
@@ -27,7 +27,7 @@
 @divider     : 'default';
 @flag        : 'default';
 @header      : 'material';
-@icon        : 'material';
+@icon        : 'default';
 @image       : 'default';
 @input       : 'default';
 @label       : 'default';
