--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,8 @@ yarn-error.log*
 /.vs
 
 # Visual Studio Code
-/.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
