--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "debug": "^4.1.1",
     "keycodez": "^1.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
