--- a/package.json
+++ b/package.json
@@ -13,15 +13,11 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
     "validator": "^10.11.0"
   },
   "scripts": {
-    "build-semantic": "cd src/styling && gulp build-css build-assets",
-    "watch-semantic": "cd src/styling && npm run build-semantic && gulp watch",
-    "start": "npm run build-semantic && react-scripts start",
-    "build": "npm run build-semantic && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -33,11 +29,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "semantic-ui": "^2.4.2"
-  },
-  "engines": {
-    "yarn": "YARN NO LONGER USED - use npm instead."
-  }
+  ]
 }
