--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.6",
     "react-error-boundaries": "^1.1.4",
+    "react-ga": "^2.5.7",
     "react-pose": "^4.0.8",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
