--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^12.0.5",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@uifabric/experiments": "^6.78.5",
     "@uifabric/fluent-theme": "^0.16.10",
     "classnames": "^2.2.6",
     "debug": "^4.1.1",
