--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "debug": "^4.1.1",
     "keycodez": "^1.0.0",
+    "office-ui-fabric-core": "^10.1.0",
     "office-ui-fabric-react": "^6.189.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.6",
