--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@types/node": "^12.0.5",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
-    "@uifabric/experiments": "^6.78.5",
     "@uifabric/fluent-theme": "^0.16.10",
     "classnames": "^2.2.6",
     "debug": "^4.1.1",
@@ -22,17 +21,22 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "source-map-explorer": "^2.0.0",
     "typescript": "^3.5.1",
     "validator": "^11.0.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "plugin:you-dont-need-lodash-underscore/compatible"
+    ]
   },
   "browserslist": {
     "production": [
@@ -45,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.5.0",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
